Configure slurmd to restart upon-failure
In "config-less" mode for login and compute nodes, slurmd will contact
the controller upon boot and request its configuration. It does not
retry if the controller happens to be down, even momentarily. This
configures SystemD to restart slurmd continually. This is an extremely
simple configuration that is CentOS 7 compatible; more sophisticated
backoff and rate limiting can be applied in later releases of SystemD.

--- a/etc/slurmd.service.in
+++ b/etc/slurmd.service.in
@@ -17,6 +17,8 @@ LimitNOFILE=131072
 LimitMEMLOCK=infinity
 LimitSTACK=infinity
 Delegate=yes
+Restart=on-failure
+RestartSec=15
 @SYSTEMD_TASKSMAX_OPTION@
 
 # Uncomment the following lines to disable logging through journald.
